--- a/src/assets/scss/partials/_colors.scss
+++ b/src/assets/scss/partials/_colors.scss
@@ -1,17 +1,13 @@
-
-
-
 $bright-yellow-1: #a98600;
 $bright-yellow-2: #dab600;
-
-
 
 $light-yellow-1: #fff9ae;
 $light-yellow-2: #f8ed62;
 $light-yellow-3: #e9d700;
 
-
 $black: #000000;
+
+$default-color: #2c3e50;
 
 
 
