--- a/src/assets/scss/partials/_fonts.scss
+++ b/src/assets/scss/partials/_fonts.scss
@@ -1,4 +1,9 @@
+@font-face {
+  font-family: 'Rubik', Arial, Helvetica, sans-serif;
+  src: url('https://fonts.googleapis.com/css?family=Rubik:400,700'), format('woff');
+}
 
+$base-font: 'Rubik', Arial, Helvetica, sans-serif;
 
 
 $light: 100;
