--- a/src/assets/scss/partials/_utility.scss
+++ b/src/assets/scss/partials/_utility.scss
@@ -1,3 +1,5 @@
+@import './_colors.scss';
+
 html {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -10,4 +12,14 @@ html {
   -webkit-box-sizing: inherit;
   -ms-box-sizing: inherit;
   box-sizing: inherit;
+}
+
+html,
+body {
+  background-color: $bright-yellow-2;
+  width:100%;
+  height:100%;
+  padding:0;
+  margin:0;
+  overflow-x:hidden;
 }
