restructure few things

--- a/src/assets/scss/common/variables.scss
+++ b/src/assets/scss/common/variables.scss
@@ -1,3 +1,6 @@
+// background color theme of the app
+$background: linear-gradient(to bottom, #8e0e00, #1f1c18);
+
 $bright-yellow-1: #a98600;
 $bright-yellow-2: #dab600;
 
@@ -8,6 +11,3 @@ $light-yellow-3: #e9d700;
 $black: #000000;
 
 $default-color: #2c3e50;
-
-
-
