styled todo item

--- a/src/assets/scss/common/mixins.scss
+++ b/src/assets/scss/common/mixins.scss
@@ -8,28 +8,10 @@
   border-radius: $radius;
 }
 
-// @mixin rounded-corner( $radius) {
-//   -moz-border-radius: $radius;
-//   -ms-border-radius: $radius;
-//   -webkit-border-radius: $radius;
-//   border-radius: $radius;
-// }
-
-// @mixin clear-both {
-//   clear: both;
-//   content: '';
-//   display: table;
-// }
-
-// @mixin default-input-control {
-//   outline: none;
-//   padding: 16px;
-// }
-
-// @mixin default-button-control {
-//   background-color: $bright-yellow-1;
-//   color: $default-color;
-//   outline: none;
-//   padding: 16px;
-//   text-align: center;
-// }
+@mixin fix-header {
+  position:fixed;
+  top:0;
+  left:0;
+  right:0;
+  z-index: $app-header-z-index;
+}
