--- a/src/assets/scss/common/variables.scss
+++ b/src/assets/scss/common/variables.scss
@@ -1,6 +1,3 @@
-// background color theme of the app
-$background: linear-gradient(to bottom, #8e0e00, #1f1c18);
-
 $bright-yellow-1: #a98600;
 $bright-yellow-2: #dab600;
 
@@ -11,3 +8,10 @@ $light-yellow-3: #e9d700;
 $black: #000000;
 
 $default-color: #2c3e50;
+
+$app-header-z-index: 1;
+$app-overlay-z-index: 2;
+$app-modal-z-index: 3;
+
+$checkbox-background-color:  #e4dede;
+$checkbox-border-color: #fff;
