--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,6 +2,7 @@
 @import '../scss/common/fonts';
 @import '../scss/common/mixins';
 @import '../scss/common/variables';
+@import '../scss/common/radiobutton';
 @import '../scss/common/base';
 @import '../scss/common/utility';
 
