--- a/src/assets/scss/common/utility.scss
+++ b/src/assets/scss/common/utility.scss
@@ -73,3 +73,16 @@
   white-space: nowrap;
   overflow: hidden;
 }
+
+.reset-button-control {
+  outline: none;
+  border: 0;
+  padding: 16px;
+  text-align: center;
+  width: 100%;
+  border:0.5px solid #ccc;
+  border-right:0;
+  font-size: 14px;
+  letter-spacing: 1px;
+  font-weight: $bold;
+}
