--- a/src/assets/scss/common/variables.scss
+++ b/src/assets/scss/common/variables.scss
@@ -14,4 +14,12 @@ $app-overlay-z-index: 2;
 $app-modal-z-index: 3;
 
 $checkbox-background-color:  #e4dede;
-$checkbox-border-color: #fff;
+$checkbox-border-color: $default-color;
+
+$active-tab-color: #eade3c;
+
+$radiobutton-background-color: $checkbox-background-color;
+$radiobutton-border-color: $checkbox-border-color;
+
+$border-color: #ccc;
+
