--- a/src/assets/scss/common/utility.scss
+++ b/src/assets/scss/common/utility.scss
@@ -80,8 +80,9 @@
   padding: 16px;
   text-align: center;
   width: 100%;
-  border:0.5px solid #ccc;
-  border-right:0;
+  background-color: #e4e3e3;
+  border: 0.5px solid #ccc;
+  border-right: 0;
   font-size: 14px;
   letter-spacing: 1px;
   font-weight: $bold;
